HtmlAgilityCssSelectors/Parser.fsyacc.output
Output file describing compiled parser placed in F:\Workspace\F#Fuckabout\HtmlAgilityCssSelectors\Parser.fs and F:\Workspace\F#Fuckabout\HtmlAgilityCssSelectors\Parser.fsi
------------------------
states = 
state 0:
  items:
    _startstart ->  . start

  actions:
    action 'IDENT' (noprec):   shift 15
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   shift 20
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   shift 14
    action 'HASH' (noprec):   shift 18
    action 'DOT' (noprec):   shift 16
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto start: 1
    goto Init: 2
    goto SelectorsGroup: 3
    goto Selector: 5
    goto FullSimpleSelectorSeq: 8
    goto SimpleSelectorSeq: 11
    goto SimpleSelector: 12

state 1:
  items:
    _startstart -> start . 

  actions:
    action 'IDENT' (noprec):   accept
    action 'SINGLEQOUTE' (noprec):   accept
    action 'EQUALS' (noprec):   accept
    action 'RBRACKET' (noprec):   accept
    action 'LBRACKET' (noprec):   accept
    action 'EOF' (noprec):   accept
    action 'STAR' (noprec):   accept
    action 'HASH' (noprec):   accept
    action 'DOT' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'GREATER' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'S' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    start -> Init . 

  actions:
    action 'IDENT' (noprec):   reduce start --> Init
    action 'SINGLEQOUTE' (noprec):   reduce start --> Init
    action 'EQUALS' (noprec):   reduce start --> Init
    action 'RBRACKET' (noprec):   reduce start --> Init
    action 'LBRACKET' (noprec):   reduce start --> Init
    action 'EOF' (noprec):   reduce start --> Init
    action 'STAR' (noprec):   reduce start --> Init
    action 'HASH' (noprec):   reduce start --> Init
    action 'DOT' (noprec):   reduce start --> Init
    action 'COMMA' (noprec):   reduce start --> Init
    action 'GREATER' (noprec):   reduce start --> Init
    action 'PLUS' (noprec):   reduce start --> Init
    action 'S' (noprec):   reduce start --> Init
    action 'error' (noprec):   reduce start --> Init
    action '#' (noprec):   reduce start --> Init
    action '$$' (noprec):   reduce start --> Init

  immediate action:   reduce start --> Init
 gotos:

state 3:
  items:
    Init -> SelectorsGroup . 'EOF'
    SelectorsGroup -> SelectorsGroup . 'COMMA' Selector

  actions:
    action 'IDENT' (noprec):   error
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'EOF' (noprec):   shift 4
    action 'STAR' (noprec):   error
    action 'HASH' (noprec):   error
    action 'DOT' (noprec):   error
    action 'COMMA' (noprec):   shift 6
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 4:
  items:
    Init -> SelectorsGroup 'EOF' . 

  actions:
    action 'IDENT' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'SINGLEQOUTE' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'EQUALS' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'RBRACKET' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'LBRACKET' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'EOF' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'STAR' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'HASH' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'DOT' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'COMMA' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'GREATER' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'PLUS' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'S' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action 'error' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action '#' (noprec):   reduce Init --> SelectorsGroup 'EOF'
    action '$$' (noprec):   reduce Init --> SelectorsGroup 'EOF'

  immediate action:   reduce Init --> SelectorsGroup 'EOF'
 gotos:

state 5:
  items:
    SelectorsGroup -> Selector . 

  actions:
    action 'IDENT' (noprec):   reduce SelectorsGroup --> Selector
    action 'SINGLEQOUTE' (noprec):   reduce SelectorsGroup --> Selector
    action 'EQUALS' (noprec):   reduce SelectorsGroup --> Selector
    action 'RBRACKET' (noprec):   reduce SelectorsGroup --> Selector
    action 'LBRACKET' (noprec):   reduce SelectorsGroup --> Selector
    action 'EOF' (noprec):   reduce SelectorsGroup --> Selector
    action 'STAR' (noprec):   reduce SelectorsGroup --> Selector
    action 'HASH' (noprec):   reduce SelectorsGroup --> Selector
    action 'DOT' (noprec):   reduce SelectorsGroup --> Selector
    action 'COMMA' (noprec):   reduce SelectorsGroup --> Selector
    action 'GREATER' (noprec):   reduce SelectorsGroup --> Selector
    action 'PLUS' (noprec):   reduce SelectorsGroup --> Selector
    action 'S' (noprec):   reduce SelectorsGroup --> Selector
    action 'error' (noprec):   reduce SelectorsGroup --> Selector
    action '#' (noprec):   reduce SelectorsGroup --> Selector
    action '$$' (noprec):   reduce SelectorsGroup --> Selector

  immediate action:   reduce SelectorsGroup --> Selector
 gotos:

state 6:
  items:
    SelectorsGroup -> SelectorsGroup 'COMMA' . Selector

  actions:
    action 'IDENT' (noprec):   shift 15
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   shift 20
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   shift 14
    action 'HASH' (noprec):   shift 18
    action 'DOT' (noprec):   shift 16
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Selector: 7
    goto FullSimpleSelectorSeq: 8
    goto SimpleSelectorSeq: 11
    goto SimpleSelector: 12

state 7:
  items:
    SelectorsGroup -> SelectorsGroup 'COMMA' Selector . 

  actions:
    action 'IDENT' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'SINGLEQOUTE' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'EQUALS' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'RBRACKET' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'LBRACKET' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'EOF' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'STAR' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'HASH' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'DOT' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'COMMA' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'GREATER' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'PLUS' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'S' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action 'error' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action '#' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
    action '$$' (noprec):   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector

  immediate action:   reduce SelectorsGroup --> SelectorsGroup 'COMMA' Selector
 gotos:

state 8:
  items:
    Selector -> FullSimpleSelectorSeq . 
    Selector -> FullSimpleSelectorSeq . Combinator Selector

  actions:
    action 'IDENT' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'SINGLEQOUTE' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'EQUALS' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'RBRACKET' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'LBRACKET' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'EOF' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'STAR' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'HASH' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'DOT' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'COMMA' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action 'GREATER' (noprec):   shift 30
    action 'PLUS' (noprec):   shift 32
    action 'S' (noprec):   shift 31
    action 'error' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action '#' (noprec):   reduce Selector --> FullSimpleSelectorSeq
    action '$$' (noprec):   reduce Selector --> FullSimpleSelectorSeq

  immediate action: <none>
 gotos:
    goto Combinator: 9

state 9:
  items:
    Selector -> FullSimpleSelectorSeq Combinator . Selector

  actions:
    action 'IDENT' (noprec):   shift 15
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   shift 20
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   shift 14
    action 'HASH' (noprec):   shift 18
    action 'DOT' (noprec):   shift 16
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Selector: 10
    goto FullSimpleSelectorSeq: 8
    goto SimpleSelectorSeq: 11
    goto SimpleSelector: 12

state 10:
  items:
    Selector -> FullSimpleSelectorSeq Combinator Selector . 

  actions:
    action 'IDENT' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'SINGLEQOUTE' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'EQUALS' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'RBRACKET' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'LBRACKET' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'EOF' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'STAR' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'HASH' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'DOT' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'COMMA' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'GREATER' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'PLUS' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'S' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action 'error' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action '#' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
    action '$$' (noprec):   reduce Selector --> FullSimpleSelectorSeq Combinator Selector

  immediate action:   reduce Selector --> FullSimpleSelectorSeq Combinator Selector
 gotos:

state 11:
  items:
    FullSimpleSelectorSeq -> SimpleSelectorSeq . 
    SimpleSelectorSeq -> SimpleSelectorSeq . SimpleSelector

  actions:
    action 'IDENT' (noprec):   shift 15
    action 'SINGLEQOUTE' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'EQUALS' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'RBRACKET' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'LBRACKET' (noprec):   shift 20
    action 'EOF' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'STAR' (noprec):   shift 14
    action 'HASH' (noprec):   shift 18
    action 'DOT' (noprec):   shift 16
    action 'COMMA' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'GREATER' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'PLUS' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'S' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action 'error' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action '#' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq
    action '$$' (noprec):   reduce FullSimpleSelectorSeq --> SimpleSelectorSeq

  immediate action: <none>
 gotos:
    goto SimpleSelector: 13

state 12:
  items:
    SimpleSelectorSeq -> SimpleSelector . 

  actions:
    action 'IDENT' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'SINGLEQOUTE' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'EQUALS' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'RBRACKET' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'LBRACKET' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'EOF' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'STAR' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'HASH' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'DOT' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'COMMA' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'GREATER' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'PLUS' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'S' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action 'error' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action '#' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector
    action '$$' (noprec):   reduce SimpleSelectorSeq --> SimpleSelector

  immediate action:   reduce SimpleSelectorSeq --> SimpleSelector
 gotos:

state 13:
  items:
    SimpleSelectorSeq -> SimpleSelectorSeq SimpleSelector . 

  actions:
    action 'IDENT' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'SINGLEQOUTE' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'EQUALS' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'RBRACKET' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'LBRACKET' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'EOF' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'STAR' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'HASH' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'DOT' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'COMMA' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'GREATER' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'PLUS' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'S' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action 'error' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action '#' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
    action '$$' (noprec):   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector

  immediate action:   reduce SimpleSelectorSeq --> SimpleSelectorSeq SimpleSelector
 gotos:

state 14:
  items:
    SimpleSelector -> 'STAR' . 

  actions:
    action 'IDENT' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'SINGLEQOUTE' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'EQUALS' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'RBRACKET' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'LBRACKET' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'EOF' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'STAR' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'HASH' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'DOT' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'COMMA' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'GREATER' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'PLUS' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'S' (noprec):   reduce SimpleSelector --> 'STAR'
    action 'error' (noprec):   reduce SimpleSelector --> 'STAR'
    action '#' (noprec):   reduce SimpleSelector --> 'STAR'
    action '$$' (noprec):   reduce SimpleSelector --> 'STAR'

  immediate action:   reduce SimpleSelector --> 'STAR'
 gotos:

state 15:
  items:
    SimpleSelector -> 'IDENT' . 

  actions:
    action 'IDENT' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'SINGLEQOUTE' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'EQUALS' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'RBRACKET' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'LBRACKET' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'EOF' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'STAR' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'HASH' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'DOT' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'COMMA' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'GREATER' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'PLUS' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'S' (noprec):   reduce SimpleSelector --> 'IDENT'
    action 'error' (noprec):   reduce SimpleSelector --> 'IDENT'
    action '#' (noprec):   reduce SimpleSelector --> 'IDENT'
    action '$$' (noprec):   reduce SimpleSelector --> 'IDENT'

  immediate action:   reduce SimpleSelector --> 'IDENT'
 gotos:

state 16:
  items:
    SimpleSelector -> 'DOT' . 'IDENT'

  actions:
    action 'IDENT' (noprec):   shift 17
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   error
    action 'HASH' (noprec):   error
    action 'DOT' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 17:
  items:
    SimpleSelector -> 'DOT' 'IDENT' . 

  actions:
    action 'IDENT' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'SINGLEQOUTE' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'EQUALS' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'RBRACKET' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'LBRACKET' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'EOF' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'STAR' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'HASH' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'DOT' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'COMMA' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'GREATER' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'PLUS' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'S' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action 'error' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action '#' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'
    action '$$' (noprec):   reduce SimpleSelector --> 'DOT' 'IDENT'

  immediate action:   reduce SimpleSelector --> 'DOT' 'IDENT'
 gotos:

state 18:
  items:
    SimpleSelector -> 'HASH' . 'IDENT'

  actions:
    action 'IDENT' (noprec):   shift 19
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   error
    action 'HASH' (noprec):   error
    action 'DOT' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 19:
  items:
    SimpleSelector -> 'HASH' 'IDENT' . 

  actions:
    action 'IDENT' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'SINGLEQOUTE' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'EQUALS' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'RBRACKET' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'LBRACKET' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'EOF' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'STAR' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'HASH' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'DOT' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'COMMA' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'GREATER' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'PLUS' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'S' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action 'error' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action '#' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'
    action '$$' (noprec):   reduce SimpleSelector --> 'HASH' 'IDENT'

  immediate action:   reduce SimpleSelector --> 'HASH' 'IDENT'
 gotos:

state 20:
  items:
    SimpleSelector -> 'LBRACKET' . 'IDENT' 'RBRACKET'
    SimpleSelector -> 'LBRACKET' . 'IDENT' AttributeComparison AttributeValue 'RBRACKET'

  actions:
    action 'IDENT' (noprec):   shift 21
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   error
    action 'HASH' (noprec):   error
    action 'DOT' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 21:
  items:
    SimpleSelector -> 'LBRACKET' 'IDENT' . 'RBRACKET'
    SimpleSelector -> 'LBRACKET' 'IDENT' . AttributeComparison AttributeValue 'RBRACKET'

  actions:
    action 'IDENT' (noprec):   error
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   shift 29
    action 'RBRACKET' (noprec):   shift 22
    action 'LBRACKET' (noprec):   error
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   error
    action 'HASH' (noprec):   error
    action 'DOT' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto AttributeComparison: 23

state 22:
  items:
    SimpleSelector -> 'LBRACKET' 'IDENT' 'RBRACKET' . 

  actions:
    action 'IDENT' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'SINGLEQOUTE' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'EQUALS' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'RBRACKET' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'LBRACKET' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'EOF' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'STAR' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'HASH' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'DOT' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'COMMA' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'GREATER' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'PLUS' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'S' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action 'error' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action '#' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
    action '$$' (noprec):   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'

  immediate action:   reduce SimpleSelector --> 'LBRACKET' 'IDENT' 'RBRACKET'
 gotos:

state 23:
  items:
    SimpleSelector -> 'LBRACKET' 'IDENT' AttributeComparison . AttributeValue 'RBRACKET'

  actions:
    action 'IDENT' (noprec):   error
    action 'SINGLEQOUTE' (noprec):   shift 26
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   error
    action 'HASH' (noprec):   error
    action 'DOT' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto AttributeValue: 24

state 24:
  items:
    SimpleSelector -> 'LBRACKET' 'IDENT' AttributeComparison AttributeValue . 'RBRACKET'

  actions:
    action 'IDENT' (noprec):   error
    action 'SINGLEQOUTE' (noprec):   error
    action 'EQUALS' (noprec):   error
    action 'RBRACKET' (noprec):   shift 25
    action 'LBRACKET' (noprec):   error
    action 'EOF' (noprec):   error
    action 'STAR' (noprec):   error
    action 'HASH' (noprec):   error
    action 'DOT' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'GREATER' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'S' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 25:
  items:
    SimpleSelector -> 'LBRACKET' 'IDENT' AttributeComparison AttributeValue 'RBRACKET' . 
